# aruco_fractal_tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml
aruco_fractal_tracker/: CMakeLists.txt  package.xml
aruco_fractal_tracker/include/aruco_fractal_tracker/: aruco_fractal_tracker_node.hpp
aruco_fractal_tracker/src/: aruco_fractal_tracker_node.cpp  aruco_fractal_tracker_node_main.cpp
example_marker/: marker_configuration.yaml
include/aruco_fractal_tracker/: aruco_fractal_tracker_node.hpp
src/: aruco_fractal_tracker_node.cpp  aruco_fractal_tracker_node_main.cpp
